upload feature built

--- a/public/index2.html
+++ b/public/index2.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>  
 <html>  
 <head>  
-    <title>S3 Audio</title>
+    <title>Flame Keeper</title>
 </head>  
 <body>  
-    <button onclick="playTunes()">Play</button>
-    <button onclick="stopTunes()">Stop</button>
+    <button onclick="launch()">LAUNCH</button>
+    
     <div>
         <img id="spinner" style="display:none" src="./images/ajax-loader.gif" alt="">
     </div>
